2011-04-12  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Eric Seidel.

        REGRESSION(r82419): extra border in t0805-c5519-ibrdr-r-00-a.html
        https://bugs.webkit.org/show_bug.cgi?id=57459

        * fast/borders/bidi-002.html: Added.
        * fast/borders/bidi-004.html: Added.
        * fast/borders/bidi-009a.html: Added.
        * platform/mac/fast/borders/bidi-002-expected.checksum: Added.
        * platform/mac/fast/borders/bidi-002-expected.png: Added.
        * platform/mac/fast/borders/bidi-002-expected.txt: Added.
        * platform/mac/fast/borders/bidi-004-expected.checksum: Added.
        * platform/mac/fast/borders/bidi-004-expected.png: Added.
        * platform/mac/fast/borders/bidi-004-expected.txt: Added.
        * platform/mac/fast/borders/bidi-009a-expected.checksum: Added.
        * platform/mac/fast/borders/bidi-009a-expected.png: Added.
        * platform/mac/fast/borders/bidi-009a-expected.txt: Added.
2011-04-12  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Eric Seidel.

        REGRESSION(r82419): extra border in t0805-c5519-ibrdr-r-00-a.html
        https://bugs.webkit.org/show_bug.cgi?id=57459

        Slightly change the way we decide if a InlineFlowBox is the last box for its renderer.
        We include the border in that box under these conditions:
        (1) The next line was not created, or it is constructed. We check the previous line for rtl.
        (2) The logicallyLastRun is not a descendant of this renderer.
        (3) The logicallyLastRun is a descendant of this renderer, but it is the last child of this renderer and it does not wrap to the next line.
        I added the tests from bug 47210, because now the draw the borders correctly.

        Tests: fast/borders/bidi-002.html
               fast/borders/bidi-004.html
               fast/borders/bidi-009a.html

        * rendering/InlineFlowBox.cpp:
        (WebCore::InlineFlowBox::onEndChain):
        (WebCore::isAnsectorAndWithinBlock):
        (WebCore::InlineFlowBox::determineSpacingForFlowBoxes):
        * rendering/InlineFlowBox.h:
        * rendering/RenderBlock.h:
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::constructLine):
        (WebCore::RenderBlock::layoutInlineChildren):

Canonical link: https://commits.webkit.org/73398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83638 268f45cc-cd09-0410-ab3c-d52691b4dbfc